--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -9,7 +9,7 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 $primary: #F47878;
-$secondary: #26A69A;
+$secondary: #5bbbe4;
 $accent: #9C27B0;
 $dark: #1D1D1D;
 $positive: #21BA45;
